--- a/pwj-module-8-my-blog-app/exercises/style/style.css
+++ b/pwj-module-8-my-blog-app/exercises/style/style.css
@@ -55,8 +55,6 @@ header::after {
 }
 
 .main {
-  background-color: yellow;
-  height: 100px;
   margin-top: 32px;
   display: flex;
   justify-content: center;
@@ -64,8 +62,8 @@ header::after {
 
 .main-container {
   display: flex;
-  max-width: 750px;
-  min-width: 600px;
+  max-width: 1050px;
+  min-width: 800px;
   width: 100%;
 }
 
@@ -78,4 +76,61 @@ footer {
   align-items: center;
   margin-top: 40px;
   font-size: 14px;
+}
+
+.post {
+  display: flex;
+  flex: 1;
+  border: 1px solid #eaecee;
+  border-radius: 8px;
+  min-height: 200px;
+  overflow: hidden;
+  transition: all 250ms;
+  cursor: pointer;
+}
+
+.post:hover {
+  transform: translate3d(0px, -5px, 10px);
+  -webkit-box-shadow: 10px 10px 53px -2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 53px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 53px -2px rgba(0, 0, 0, 0.75);
+}
+
+.post-image {
+  flex-basis: 40%;
+  background-image: url("https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+  background-size: cover;
+  background-position: center;
+}
+
+.post-content {
+  flex-basis: 60%;
+  padding: 24px;
+}
+
+.post-date {
+  font-size: 12px;
+  color: #adb5bd;
+  font-weight: 600;
+}
+
+.post-title {
+  margin-top: 16px;
+  font-size: 1.5em;
+  color: #333;
+  font-weight: 600;
+}
+
+.post-title h4 {
+  margin: 0;
+}
+
+.post-text {
+  margin-top: 4px;
+  color: #495057;
+  font-weight: 400;
+  font-size: 1em;
+  line-height: 1.4;
+  max-height: 65px;
+  overflow: hidden;
 }
