--- a/pwj-module-8-my-blog-app/exercises/style/style.css
+++ b/pwj-module-8-my-blog-app/exercises/style/style.css
@@ -9,16 +9,19 @@ body {
 
 header {
   min-height: 350px;
-  background: gray;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: url("../assets/banner.jpeg");
+
   background-size: cover;
   background-position: center;
   position: relative;
+}
+
+.home-page header {
+  background-image: url("../assets/banner.jpeg");
 }
 
 header > * {
@@ -132,6 +135,10 @@ footer {
   line-height: 1.4;
   max-height: 65px;
   overflow: hidden;
+}
+
+.post-link {
+  text-decoration: none;
 }
 
 .nav-button.nav-post-button {
